fix broken scrollbar

--- a/MomotalkSource.theme.css
+++ b/MomotalkSource.theme.css
@@ -167,15 +167,15 @@
 
 /* Scrollbar */
 .scroller_e2e187 {
-	::-webkit-scrollbar {
+	&::-webkit-scrollbar {
 		width: 15px;
 	}
 
-	::-webkit-scrollbar-track {
+	&::-webkit-scrollbar-track {
 		background-color: #E1E4E6;
 	}
 
-	::-webkit-scrollbar-thumb {
+	&::-webkit-scrollbar-thumb {
 		background-color: #B0B0B0;
 		border-radius: 8px;
 	}
